<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/side_border">


        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_border"
            android:layout_marginRight="@dimen/side_border"
            android:layout_marginTop="5dp"
            android:hint="@string/name_hint"/>

        <TextView
            android:id="@+id/topping_title"
            style="@style/textHeader"
            android:text="@string/topping_title" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            style="@style/toppingCheckbox"
            android:onClick="updatePrice"
            android:text="@string/whipped_cream_text" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            style="@style/toppingCheckbox"
            android:onClick="updatePrice"
            android:text="@string/chocolate_text" />

        <TextView
            android:id="@+id/quantity_title"
            style="@style/textHeader"
            android:text="@string/quantity_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                style="@style/quantityButton"
                android:onClick="decrement"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/quantity_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="16sp" />

            <Button
                style="@style/quantityButton"
                android:onClick="increment"
                android:text="@string/plus_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/price_title"
            style="@style/textHeader"
            android:text="@string/order_summary_title" />

        <TextView
            android:id="@+id/order_summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/side_border"
            android:paddingRight="@dimen/side_border"
            android:text="@string/total_default"
            android:textSize="16sp" />

        <Button
            android:layout_width="74dp"
            android:layout_height="38dp"
            android:layout_marginLeft="@dimen/side_border"
            android:layout_marginRight="@dimen/side_border"
            android:layout_marginTop="@dimen/num_border"
            android:layout_marginBottom="@dimen/num_border"
            android:background="@drawable/button"
            android:textColor="@color/offWhite"
            android:onClick="submitOrder"
            android:text="@string/order_button" />

    </LinearLayout>
</ScrollView>
